tests/ui/ferrocene/compiler-arguments/upper_c_linker-flavor/upper_c_linker-flavor_space-eq-empty.rs
//@ check-fail
//@ compile-flags: -C linker-flavor=
//~? ERROR incorrect value

fn main() {}

// ferrocene-annotations: um_rustc_C_linker_flavor
